--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recomendador de filmes</title>
+    <title>Recomendador de filme lgbt</title>
 </head>
 <body>
 <H1 Recomendador de filme lgbt </H1>
