--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recomendador de filme lgbt</title>
+    <link rel="stylesheet" href="" class="css">
 </head>
 <body>
 <h1>Recomendador de filme lgbtqiapn+</h1>
